[gd_scene load_steps=3 format=2]

[ext_resource path="res://player/VRController.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
radius = 0.1

[node name="VRController" type="ARVRController"]
script = ExtResource( 1 )

[node name="Mesh" type="MeshInstance" parent="."]
visible = false

[node name="MeshUpdateTimer" type="Timer" parent="."]
autostart = true

[node name="GrabRange" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.025, -0.05 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="GrabRange"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.025, -0.05 )
shape = SubResource( 1 )

[connection signal="timeout" from="MeshUpdateTimer" to="." method="_on_MeshUpdateTimer_timeout"]
